--- a/css/init.css
+++ b/css/init.css
@@ -1,5 +1,5 @@
 *  { margin: 0; padding: 0;}
 body { font-family: sans-serif; }
-li { list-style: none; display: inline-block }
-a { text-decoration: none; }
+li { list-style: none; display: inline-block;}
+a { text-decoration: none; display: inline-block;}
 img { border: 0;}
