menu-bar 작업 진행중  - 그라데이션 적용  - a 링크 기본값 제거  - netflix icon 적용
필요 작업
 - 프로필 이미지 적용
 - 본문 작업 수행
 - 하단 필요 컨텐츠 구성

--- a/css/init.css
+++ b/css/init.css
@@ -2,4 +2,7 @@
 body { font-family: sans-serif; }
 li { list-style: none; display: inline-block;}
 a { text-decoration: none; display: inline-block;}
+a:link { color: white; text-decoration: none;}
+a:visited { color: white; text-decoration: none;}
+a:hover { color: white; text-decoration: none;}
 img { border: 0;}
