--- a/css/index.css
+++ b/css/index.css
@@ -1,17 +1,29 @@
-
+@font-face {
+    font-family: Netflix-Sans;
+    src: url(https://assets.nflxext.com/ffe/siteui/fonts/netflix-sans/v3/NetflixSans_W_Md.woff2) format("woff2")
+}
+@font-face {
+    font-family: nf-icon;
+    src: url(https://assets.nflxext.com/ffe/siteui/fonts/nf-icon-v1-93.eot);
+    src: url(https://assets.nflxext.com/ffe/siteui/fonts/nf-icon-v1-93.eot?#iefix) format('embedded-opentype'), url(https://assets.nflxext.com/ffe/siteui/fonts/nf-icon-v1-93.woff) format('woff'), url(https://assets.nflxext.com/ffe/siteui/fonts/nf-icon-v1-93.ttf) format('truetype'), url(https://assets.nflxext.com/ffe/siteui/fonts/nf-icon-v1-93.svg#nf-icon-v1-93) format('svg');
+    font-weight: 400;
+    font-style: normal
+}
 body{
-    background-color: black;
+    background-color: white;
     color: white;
     font-size: 14px;
 }
 
 header{
+    font-family: Netflix Sans;
     padding: 0 60px;
     height: 70px;
     display: flex;
     position: relative;
     width: auto;
     /*justify-content: space-between;*/
+    background: linear-gradient(rgba(20,20,20,0.5), rgba(0,0,0,0));
 }
 header #logo {
     margin: auto 0;
@@ -29,6 +41,9 @@ header #primary-menu li {
     justify-content: space-around;
     margin-right: 25px;
 }
+header #primary-menu li:hover {
+    opacity: 0.5;
+}
 header #secondary-menu {
     align-items: center;
     align-items: stretch;
@@ -41,4 +56,16 @@ header #secondary-menu li {
     align-items: center;
     justify-content: space-around;
     margin-right: 20px;
+}
+
+#search:before {
+    font-family: nf-icon;
+    font-size: 1.3em;
+    content: '\e636';
+}
+
+#alarm:before {
+    font-family: nf-icon;
+    font-size: 1.5em;
+    content: '\e663';
 }
